# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md
.github/workflows/: ci.yml
tests/: test1.cpp
